[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/critters/sheep/sheep_idle_6.png" type="Texture" id=1]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_4.png" type="Texture" id=6]
[ext_resource path="res://sprites/critters/sheep/sheep_idle_5.png" type="Texture" id=7]
[ext_resource path="res://sprites/critters/sheep/sheep_walk_0.png" type="Texture" id=8]
[ext_resource path="res://sprites/critters/sheep/sheep_walk_1.png" type="Texture" id=9]
[ext_resource path="res://sprites/critters/sheep/sheep_walk_3.png" type="Texture" id=10]
[ext_resource path="res://sprites/critters/sheep/sheep_walk_2.png" type="Texture" id=11]
[ext_resource path="res://Sheep.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.07043, 5.17165 )

[node name="Sheep" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 97
script = ExtResource( 12 )

[node name="Sheep_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
z_index = 1
frames = SubResource( 1 )
animation = "Idle"

[node name="Sheep_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.07778 )
shape = SubResource( 2 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
